# memkit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: bench_timing.cpp
benchmarks/hand_rolled/: fifo_queue.c  fifo_queue.h  ring_buffer.c  ring_buffer.h
benchmarks/size/: queue_hand_rolled.c  queue_memkit.cpp  ring_hand_rolled.c  ring_memkit.cpp
docs/: ADOPTION_GUIDE.md  CONCURRENCY.md  CONTAINER_GUIDE.md  CXX_API_REFERENCE.md  C_API_REFERENCE.md  DESIGN_PHILOSOPHY.md  DISTRIBUTING_MCU_C.md  GETTING_STARTED.md
examples/: example_comm_pipeline.cpp  example_embedded_patterns.cpp  example_mcu.cpp  example_mcu_c.c  example_mpu.c  example_mpu.cpp
include/: arena.h  arena_config.h  bitset.h  btree.h  deque.h  dlist.h  handle_pool.h  hashmap.h  list.h  lrucache.h  memkit.h  memkit_config.h  memkit_helpers.h  memkit_object_sizes.h  objpool.h  pqueue.h  queue.h  ring.h  stack.h  vector.h
include/memkit/: concepts.hpp  config.hpp  memkit.hpp  status.hpp  stl.hpp
include/memkit/c_api/: bitset_box.hpp  btree_box.hpp  callback_bridge.hpp  create_object.hpp  deque_box.hpp  dlist_box.hpp  element_callback_bridge.hpp  element_storage.hpp  handle_pool_box.hpp  hashmap_box.hpp  list_box.hpp  lrucache_box.hpp  objpool_box.hpp  pqueue_box.hpp  queue_box.hpp  ring_box.hpp  stack_box.hpp  status_cast.hpp  status_map.hpp  vector_box.hpp
include/memkit/containers/: bit_stream.hpp  bitset.hpp  btree.hpp  byte_ring.hpp  deque.hpp  dlist.hpp  double_buffer.hpp  enum_map.hpp  fixed_iovec.hpp  fixed_variant.hpp  flat_map.hpp  handle_pool.hpp  hashmap.hpp  intrusive_list.hpp  list.hpp  lookup_table.hpp  lrucache.hpp  mpsc_queue.hpp  objpool.hpp  pqueue.hpp  queue.hpp  ring.hpp  ring_log.hpp  running_stats.hpp  small_buffer.hpp  small_string.hpp  sparse_set.hpp  spsc_queue.hpp  stack.hpp  timer_wheel.hpp  token_bucket.hpp  vector.hpp
include/memkit/detail/: bitset_core.hpp  btree_core.hpp  btree_map_core.hpp  compare_policy.hpp  deque_core.hpp  dlist_core.hpp  double_buffer_core.hpp  element_ops.hpp  element_policy.hpp  flat_map_core.hpp  growable_storage.hpp  handle_pool_core.hpp  hash_policy.hpp  hashmap_core.hpp  hashmap_map_core.hpp  intrusive_hook.hpp  list_core.hpp  lrucache_core.hpp  lrucache_map_core.hpp  mpsc_queue_core.hpp  objpool_core.hpp  pqueue_core.hpp  queue_core.hpp  ring_buffer_core.hpp  ring_core.hpp  sparse_set_core.hpp  spsc_queue_core.hpp  storage.hpp  storage_view.hpp  timer_wheel_core.hpp  utility.hpp  vector_core.hpp
include/memkit/memory/: arena.hpp  fixed_buffer.hpp  fixed_pool.hpp  heap.hpp  memory.hpp  mmap.hpp
src/: arena.cpp  mmap_backing.cpp
src/c_api/: bitset.cpp  btree.cpp  callback_bridge.cpp  deque.cpp  dlist.cpp  element_callback_bridge.cpp  handle_pool.cpp  hashmap.cpp  list.cpp  lrucache.cpp  objpool.cpp  pqueue.cpp  queue.cpp  ring.cpp  stack.cpp  static_checks.cpp  vector.cpp
tests/: test_arena_c.c  test_arena_cpp.cpp  test_bit_stream_cpp.cpp  test_bitset_c.c  test_bitset_cpp.cpp  test_btree_c.c  test_btree_cpp.cpp  test_byte_ring_cpp.cpp  test_c_api_extended.c  test_c_api_smoke.c  test_deque_c.c  test_deque_cpp.cpp  test_dlist_c.c  test_dlist_cpp.cpp  test_double_buffer_cpp.cpp  test_enum_map_cpp.cpp  test_fixed_iovec_cpp.cpp  test_fixed_variant_cpp.cpp  test_flat_map_cpp.cpp  test_handle_pool_c.c  test_handle_pool_cpp.cpp  test_hashmap_c.c  test_hashmap_cpp.cpp  test_heap_arena_cpp.cpp  test_intrusive_list_cpp.cpp  test_list_c.c  test_list_cpp.cpp  test_lookup_table_cpp.cpp  test_lrucache_c.c  test_lrucache_cpp.cpp  test_mpsc_queue_cpp.cpp  test_objpool_c.c  test_objpool_cpp.cpp  test_pqueue_c.c  test_pqueue_cpp.cpp  test_queue_c.c  test_ring_c.c  test_ring_cpp.cpp  test_ring_log_cpp.cpp  test_running_stats_cpp.cpp  (+10 more)
tests/legacy/: README.md  test_bitset.c  test_btree.c  test_deque.c  test_dlist.c  test_hashmap.c  test_list.c  test_lrucache.c  test_objpool.c  test_pqueue.c  test_ring.c  test_stack_queue.c  test_vector.c
